<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.seguimientopresion.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_historial"
        android:name="com.example.seguimientopresion.ui.historial.HistorialFragment"
        android:label="@string/menu_historial"
        tools:layout="@layout/fragment_historial" />

    <fragment
        android:id="@+id/nav_vinculacion"
        android:name="com.example.seguimientopresion.ui.vinculacion.VinculacionFragment"
        android:label="@string/menu_vinculacion"
        tools:layout="@layout/fragment_vinculacion" />

    <fragment
        android:id="@+id/nav_datos"
        android:name="com.example.seguimientopresion.ui.datos_paciente.DatosPacienteFragment"
        android:label="@string/menu_datos"
        tools:layout="@layout/fragment_datos"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.seguimientopresion.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings"/>
</navigation>