<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/datosCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datosCuenta"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/userEmail"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/guardar_email"
        android:text="@string/actualizarEmail"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        />


    <TextView
        android:id="@+id/userPassword"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/UserPassword"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_width="match_parent"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_newPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/actualizarPassword"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
</LinearLayout>