<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".ui.datos_paciente.DatosPacienteFragment">

        <TextView
            android:id="@+id/DatosPaciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:text="@string/datosPaciente"
            android:textColor="#000000"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/sexoText"
                android:layout_marginStart="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexoPaciente"
                android:textSize="18sp" />
            <Spinner
                android:id="@+id/edit_text_sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:spinnerMode="dropdown"
                android:entries="@array/sex_array"
                android:prompt="@string/sex_prompt"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="60dp"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/fechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edad"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="44dp"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/calendarioNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:editable="false"
            android:ems="10"
            android:focusable="false"
            android:clickable="true"
            android:hint="@string/datePrompt"
            android:inputType="date"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/pesoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/pesoPaciente"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_text_peso"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:ems="10"
            android:hint="@string/ingresarPeso"
            android:inputType="number|numberDecimal"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/alturaText"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/alturaPaciente"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_width="match_parent"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_Altura"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:ems="10"
            android:hint="@string/ingresarAltura"
            android:inputType="number|numberDecimal"
            android:textSize="14sp" />

        <Button
            android:id="@+id/guardar_datos"
            android:layout_width="143dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/guardar"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>

</ScrollView>