<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.RegistroPresionFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/RegistroPresion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="92dp"
                android:text="@string/registro_presion"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sistolicaText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="44dp"
                android:layout_marginRight="60dp"
                android:text="@string/presion_sistolica"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_sistolica"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="60dp"
                android:ems="10"
                android:hint="@string/sistolica_prompt"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/diastolicaText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="44dp"
                android:layout_marginRight="60dp"
                android:text="@string/presion_diastolica"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_diastolica"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="60dp"
                android:ems="10"
                android:hint="@string/diastolica_prompt"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/pulsoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="44dp"
                android:layout_marginRight="60dp"
                android:text="@string/pulso"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_pulso"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="60dp"
                android:ems="10"
                android:hint="@string/pulso_prompt"
                android:inputType="number"
                android:textSize="14sp" />

            <Button
                android:id="@+id/guardar_presion"
                android:layout_width="143dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/guardar" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>